more license stuff

--- a/README
+++ b/README
@@ -40,4 +40,5 @@ documentation - some random files about the project
 
 licenses:
 all of my code released under GPLv3
+PCB designs under CreativeCommons Attribution-ShareAlike 3.0 Unported
 The LUFA library is released under MIT license by Dean Camera
